@@ -1,3 +1,7 @@
+1998-12-15  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-procbar.c (gnome_proc_bar_set_orient): New function.
+
 1998-12-14  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnome-app-helper.c (gnome_app_install_appbar_menu_hints): Remove
